update user services  and  buildpage

--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
 
 @theme {
   --color-accent: #4f8b05;
-  --color-background: #d8d8d8;
-  --color-text-col: #686868;
+  --color-background: #c6c7c8;
+  --color-text-col: #373737;
 }
 
 @font-face {
