add Steps section component and update navbar

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
   --color-accent: #4f8b05;
   --color-background: #dcdcdc;
   --color-text-col: #373737;
-  --font-geist-mono: "Geist-Mono-Bold";
-  --font-geist-mono: "Geist-Mono-Regular";
+  --font-geist-mono-bold: "Geist-Mono-Bold";
+  --font-geist-mono-regular: "Geist-Mono-Regular";
 }
 
 @font-face{
@@ -15,8 +15,8 @@
 }
 
 @font-face{
-  font-family: "Geist-Mono-Bold";
-  src: url('src/assets/fonts/GeistMono-Bold.ttf');
+  font-family: "Geist-Mono-Regular";
+  src: url('src/assets/fonts/GeistMono-Regular.ttf');
 }
 
 :root {
