add features section

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 @theme {
   --color-accent: #4f8b05;
-  --color-background: #dcdcdc;
+  --color-background: #ffffff;
   --color-text-col: #373737;
   --font-geist-mono-bold: "Geist-Mono-Bold";
   --font-geist-mono-regular: "Geist-Mono-Regular";
